# KURO

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  build.sh  compile_flags.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  user-report.md
.github/workflows/: build.yml  dco.yml  format.yml
automated/: build-and-run.sh  build-and-test-kernel.sh  build.sh  build_and_run.sh  build_and_run_conf.sh  clang-format-fix.sh  clang-format.sh  clean-build-folder.sh
bootloader/: CMakeLists.txt
bootloader/include/file/: file.h
bootloader/include/output/: cout.h
bootloader/src/: main.c
bootloader/src/file/: file.c
bootloader/toolchain/: efi.cmake
ci/: build-bootloader.sh  build-installer.sh  build-signer.sh  build.sh  clang-format-bootloader.sh  clang-format-installer.sh  clang-format-signer.sh  clang-format.sh  clang-tidy-bootloader.sh  clang-tidy-installer.sh  clang-tidy-signer.sh  clang-tidy.sh
docs/: CONFIGURATION.md  GETTING_STARTED.md  KURO_BOOT_INFO.md  KURO_FRAMEBUFFER.md  KURO_MEMORY_MAP.md  QUICK_START.md  README.md  WRITING_A_KERNEL.md  building.md  kuro_boot_protocol.md  kuro_booting_convention.md  kuro_config.md  kuro_initimage.md  license-template.md  readme.md
include/: boot_info.h  config.h  cout.h  disk.h  file.h  kernel_helpers.h  kuro_conf.h  load.h  logger.h  main.h  memory.h  string.h
include/file/: file.h
include/output/: cout.h  logger.h
scripts/: build-and-run.sh  clean-build-folder.sh
src/: aslr.c  aslr.h  boot.c  boot.h  boot_info.c  boot_info.h  conf.c  conf.h  config.c  cout.c  disk.c  efi_dptt.h  efi_helper.h  elf.c  elf.h  file.c  file.h  helper.h  kernel_helpers.c  kuro_const.c  kuro_const.h  load.c  logger.c  main.c  memory.c  memory.h  panic.asm  panic.h  status.c  status.h  string.c  string.h  transfer_control.asm  transfer_control.h  verify.c  verify.h
src/file/: file.c
src/output/: logger.c
test-kernel/: CMakeLists.txt  linker.ld
test-kernel/include/: font.h
test-kernel/src/: kernel.c
test_kernel/: CMakeLists.txt  main.c  niji-pixel-bold-16.h  niji-pixel-regular-16.h
tests/: kernel  kuro.conf
toolchain/: efi.cmake
